Remove some test code and make sure hud doesn't wrap on smaller screens

--- a/source/Glimpse.JavaScript/glimpse.render.shell.css
+++ b/source/Glimpse.JavaScript/glimpse.render.shell.css
@@ -38,6 +38,7 @@
     min-width: 54px;
     background: #3c454f; 
     color: #fff; 
+    white-space: nowrap;
 }
 .glimpse-open td, .glimpse-open span, .glimpse-open div {
     color: #fff;
